# poem-fa

./: README.md  pyproject.toml
poem_fa/: __init__.py  hafez.db  hafez.py  main.py
tests/: test_cli.py  test_hafez.py
