[tool.poetry]
name = "poem-fa"
version = "0.1.0"
description = ""
authors = ["Mehdi Ghodsizadeh <m.ghodsizadeh@gmail.com>"]
readme = "README.md"
packages = [{include = "poem_fa"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
